objects/ssot__CaseProceedingInfraction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseProceedingId__c</fullName>
        <label>CaseProceeding</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingInfractionReportingReason__c</fullName>
        <label>Infraction Reporting Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingInfractionReportingType__c</fullName>
        <label>Infraction Reporting Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingInfractionStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Proceeding Infraction Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InfractionId__c</fullName>
        <label>Infraction</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371652426_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceedingInfraction_InfractionI_rel</label>
        <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
        <relationshipLabel>CaseProceedingInfraction_InfractionI_rel</relationshipLabel>
        <relationshipName>rel_1721371652426_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371972424_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceedingInfraction_CaseProceed_rel</label>
        <referenceTo>ssot__CaseProceeding__dlm</referenceTo>
        <relationshipLabel>CaseProceedingInfraction_CaseProceed_rel</relationshipLabel>
        <relationshipName>rel_1721371972424_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>